# postfach

./: .gitignore  LICENSE  README.md  postfach.spec
.claude/: .simplify-nudge  launch.json
.github/workflows/: ci.yml  release.yml
backend/: postfach_main.py  pyproject.toml
backend/src/postfach/: __init__.py  _demo_assets.py  accounts_store.py  ai.py  api.py  app.py  attach.py  config.py  cookbook.py  credentials.py  demo.py  desktop.py  emilia.py  extract.py  folder_map.py  invites.py  mail_imap.py  mail_send.py  mdexport.py  memory.py  notify.py  paths.py  providers.py  sanitize.py  schedule.py  search.py  stores.py  unsubscribe.py  version.py  watcher.py
backend/tests/: test_ai.py  test_api.py  test_appreife.py  test_attachments.py  test_batch2.py  test_calendar_export.py  test_config.py  test_contacts.py  test_cookbook.py  test_demo.py  test_emilia.py  test_emilia2.py  test_hygiene.py  test_mailbox.py  test_memory.py  test_onboarding.py  test_safety.py  test_sanitize.py  test_schedule.py  test_search.py  test_send.py  test_stores.py  test_threads.py  test_watcher.py
docs/: HANDBUCH.md  ROADMAP.md  api-contract.md
docs/superpowers/plans/: 2026-07-19-postfach-v01.md
docs/superpowers/specs/: 2026-07-19-postfach-design.md  2026-07-20-emilia-design.md  2026-07-21-batch1-schreiben-design.md  2026-07-21-batch11-design-design.md  (+9 more)
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: build_app.sh  install_automation.sh  make_icon.py  uninstall_automation.sh
(+57 files in other folders)
