[project]
name = "postfach"
version = "0.1.0"
description = "Local-first Notion-Mail-style client: FastAPI backend reusing email-agent intelligence"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "nh3>=0.2",
    "pyyaml>=6.0",
    "imapclient>=3.0",
    "email-agent",
    "python-multipart>=0.0.32",
    "httpx>=0.27",
    "icalendar>=7.2.2",
    "keyring>=25.7.0",
]

[project.scripts]
postfach = "postfach.app:main"
postfach-app = "postfach.desktop:main"

[project.optional-dependencies]
desktop = ["pywebview>=5.0"]

[tool.uv.sources]
email-agent = { path = "../../email-agent", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/postfach"]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
